argo-cd/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas:
    1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/api/metrics"
        argocd.argoproj.io/sync-wave: "4"

    spec:
      containers:
        - name: backend
          image: jojiiikol/note-backend:9c414a86318d4de47941e4cb2c59e29a60af09b7
          ports:
            - containerPort: 8000
            - name: metrics
              containerPort: 8000
          resources:
            limits:
              cpu: "500m"
            requests:
              cpu: "250m"
