argo-cd/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: pvc
